Branch update receipt email (#19)
* Add update receipt email flow.
* Add back to home fragment and pop all other fragments in backStack.
* Code optimization, simplify updateReceiptEmailPaymentIntent function.
* Hide the keyboard after entering the email address.
* Use navArgs to get navigation parameter.
* Add demo.gif file.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,13 +16,13 @@
         android:id="@+id/checkoutFragment"
         android:name="com.stripe.aod.sampleapp.fragment.CheckoutFragment"
         android:label="CheckoutFragment" >
+        <action
+            android:id="@+id/action_checkoutFragment_to_receiptFragment"
+            app:destination="@id/receiptFragment" />
         <argument
             android:name="amount"
             app:argType="integer"
             android:defaultValue="0" />
-        <action
-            android:id="@+id/action_checkoutFragment_to_receiptFragment"
-            app:destination="@id/receiptFragment" />
     </fragment>
     <fragment
         android:id="@+id/receiptFragment"
@@ -53,5 +53,12 @@
     <fragment
         android:id="@+id/emailFragment"
         android:name="com.stripe.aod.sampleapp.fragment.EmailFragment"
-        android:label="EmailFragment" />
+        android:label="EmailFragment" >
+        <action
+            android:id="@+id/action_emailFragment_to_receiptFragment"
+            app:destination="@id/receiptFragment" />
+        <argument
+            android:name="paymentIntentID"
+            app:argType="string"/>
+    </fragment>
 </navigation>
