-make status bar transparent. -add snackbar notice when no reader registered. -adjust the text color of button on dark mode. -adjust the size of settings menu icon. -add backgroud under diff status of keypad items.

--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -27,7 +27,7 @@
             android:gravity="center_horizontal"
             android:lineSpacingExtra="3sp"
             android:text="@string/enter_amount"
-            android:textColor="@color/text_enter_amount"
+            android:textColor="@color/text_secondary"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
             android:paddingLeft="24dp"
             android:paddingRight="24dp"
             android:text="@string/amount_entered"
-            android:textColor="@color/text_enter_amount"
+            android:textColor="@color/text_secondary"
             android:textSize="17sp"
             app:layout_constraintEnd_toStartOf="@id/amount_description"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
             android:gravity="center|end"
             android:paddingLeft="24dp"
             android:paddingRight="24dp"
-            android:textColor="@color/text_enter_amount"
+            android:textColor="@color/text_secondary"
             android:textSize="17sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/amount_entered"
