--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,8 +10,8 @@
 
         <ImageView
             android:id="@+id/menu_settings"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:src="@drawable/settings"
@@ -36,7 +36,7 @@
             android:gravity="center_horizontal|center_vertical"
             android:lineSpacingExtra="0sp"
             android:text="@string/terminal_sample_app"
-            android:textColor="@color/logo_title"
+            android:textColor="@color/text_secondary"
             android:textSize="17sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
