--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -22,7 +22,7 @@
         android:gravity="center_horizontal"
         android:lineSpacingExtra="3sp"
         android:text="@string/enter_amount"
-        android:textColor="@color/text_enter_amount"
+        android:textColor="@color/text_secondary"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
