--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -1,108 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:id="@+id/coordinatorLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/total_amount"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="98dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="$36.00"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:lineSpacingExtra="0sp"
-        android:gravity="center"/>
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tip"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="204dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="17sp"
-        android:text="@string/send_receipt_tip"
-        android:textColor="@color/text_amount"
-        android:lineSpacingExtra="4sp"
-        android:translationY="-2.21sp"
-        android:gravity="center" />
+        <TextView
+            android:id="@+id/total_amount"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="98dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="$36.00"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:lineSpacingExtra="0sp"
+            android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/receipt_email"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="364dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/email"
-        android:textSize="17sp"
-        android:textColor="@color/selector_btn_text"
-        android:lineSpacingExtra="4sp"
-        android:gravity="center"
-        android:background="@drawable/selector_btn"/>
+        <TextView
+            android:id="@+id/tip"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="204dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="17sp"
+            android:text="@string/send_receipt_tip"
+            android:textColor="@color/text_amount"
+            android:lineSpacingExtra="4sp"
+            android:translationY="-2.21sp"
+            android:gravity="center" />
 
-    <TextView
-        android:id="@+id/receipt_sms"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="432dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/sms"
-        android:textSize="17sp"
-        android:textColor="@color/selector_btn_text"
-        android:lineSpacingExtra="4sp"
-        android:gravity="center"
-        android:background="@drawable/selector_btn"/>
+        <TextView
+            android:id="@+id/receipt_email"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="364dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/email"
+            android:textSize="17sp"
+            android:textColor="@color/selector_btn_text"
+            android:lineSpacingExtra="4sp"
+            android:gravity="center"
+            android:background="@drawable/selector_btn"/>
 
-    <TextView
-        android:id="@+id/receipt_print"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="500dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/print"
-        android:textSize="17sp"
-        android:textColor="@color/selector_btn_text"
-        android:lineSpacingExtra="4sp"
-        android:gravity="center"
-        android:background="@drawable/selector_btn"/>
+        <TextView
+            android:id="@+id/receipt_sms"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="432dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/sms"
+            android:textSize="17sp"
+            android:textColor="@color/selector_btn_text"
+            android:lineSpacingExtra="4sp"
+            android:gravity="center"
+            android:background="@drawable/selector_btn"/>
 
-    <TextView
-        android:id="@+id/receipt_skip"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/no_receipt"
-        android:textSize="17sp"
-        android:textColor="@color/selector_btn_secondary_text"
-        android:lineSpacingExtra="4sp"
-        android:gravity="center"
-        android:background="@drawable/selector_secondary_btn"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/receipt_print"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="500dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/print"
+            android:textSize="17sp"
+            android:textColor="@color/selector_btn_text"
+            android:lineSpacingExtra="4sp"
+            android:gravity="center"
+            android:background="@drawable/selector_btn"/>
+
+        <TextView
+            android:id="@+id/receipt_skip"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginBottom="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/no_receipt"
+            android:textSize="17sp"
+            android:textColor="@color/selector_btn_secondary_text"
+            android:lineSpacingExtra="4sp"
+            android:gravity="center"
+            android:background="@drawable/selector_secondary_btn"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
