adjust text color and alignment on receipt UI.

--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -23,6 +23,7 @@
             tools:text="$36.00"
             android:textSize="40sp"
             android:textStyle="bold"
+            android:textColor="@color/text_primary"
             android:lineSpacingExtra="0sp"
             android:gravity="center"/>
 
@@ -38,7 +39,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:textSize="17sp"
             android:text="@string/send_receipt_tip"
-            android:textColor="@color/text_amount"
+            android:textColor="@color/text_secondary"
             android:lineSpacingExtra="4sp"
             android:translationY="-2.21sp"
             android:gravity="center" />
@@ -47,11 +48,11 @@
             android:id="@+id/receipt_email"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginTop="364dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/receipt_sms"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/email"
             android:textSize="17sp"
@@ -64,11 +65,11 @@
             android:id="@+id/receipt_sms"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginTop="432dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/receipt_print"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/sms"
             android:textSize="17sp"
@@ -81,11 +82,11 @@
             android:id="@+id/receipt_print"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginTop="500dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/receipt_skip"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/print"
             android:textSize="17sp"
