Adjustment of UI (#24)
* -make status bar transparent.
-add snackbar notice when no reader registered.
-adjust the text color of button on dark mode.
-adjust the size of settings menu icon.
-add backgroud under diff status of keypad items.

* add CircleProgressIndicator on HomeFragment.kt for reader connecting.

* fix issues of code review.

* optimize code.

* adjust text color and alignment on receipt UI.

* use val instead.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,12 +10,12 @@
 
         <ImageView
             android:id="@+id/menu_settings"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:src="@drawable/settings"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
@@ -24,8 +24,8 @@
             android:layout_marginTop="212dp"
             android:src="@drawable/logo"
             app:layout_constraintBottom_toTopOf="@id/sample_tip"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -36,11 +36,21 @@
             android:gravity="center_horizontal|center_vertical"
             android:lineSpacingExtra="0sp"
             android:text="@string/terminal_sample_app"
-            android:textColor="@color/logo_title"
+            android:textColor="@color/text_secondary"
             android:textSize="17sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:indeterminate="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/sample_tip"/>
 
         <TextView
             android:id="@+id/new_payment"
@@ -51,7 +61,7 @@
             android:text="@string/new_payment"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
