--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -36,7 +36,7 @@
                 android:textColor="@color/edit_text"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
-                android:hint="@string/input_your_email"/>
+            android:hint="@string/email"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
