--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,6 +15,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:src="@drawable/settings"
+            android:contentDescription="@string/settings"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,6 +24,7 @@
             android:layout_height="46dp"
             android:layout_marginTop="212dp"
             android:src="@drawable/logo"
+            android:contentDescription="@string/stripe"
             app:layout_constraintBottom_toTopOf="@id/sample_tip"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
