Remove top padding

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="app_padding_vertical">16dp</dimen>
+    <dimen name="app_padding_top">16dp</dimen>
 </resources>
