--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -13,7 +13,7 @@
         <TextView
             android:id="@+id/total_amount"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="98dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
