--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -16,7 +16,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:padding="24dp"
-            android:src="@drawable/back"/>
+            android:src="@drawable/back"
+            android:contentDescription="@string/back"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout"
