--- a/app/src/main/res/layout/widget_keyboard.xml
+++ b/app/src/main/res/layout/widget_keyboard.xml
@@ -20,8 +20,8 @@
         <TextView
             android:id="@+id/digit_1"
             style="@style/KeyboardDigitStyle"
-            android:layout_width="13dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:lineSpacingExtra="9sp"
             android:text="@string/key_1"
             android:textSize="20sp" />
@@ -42,8 +42,8 @@
         <TextView
             android:id="@+id/digit_2"
             style="@style/KeyboardDigitStyle"
-            android:layout_width="13dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:lineSpacingExtra="9sp"
             android:text="@string/key_2"
             android:textSize="20sp" />
@@ -65,8 +65,8 @@
         <TextView
             android:id="@+id/digit_3"
             style="@style/KeyboardDigitStyle"
-            android:layout_width="13dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:lineSpacingExtra="9sp"
             android:text="@string/key_3"
             android:textSize="20sp" />
@@ -88,8 +88,8 @@
         <TextView
             android:id="@+id/digit_4"
             style="@style/KeyboardDigitStyle"
-            android:layout_width="13dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:lineSpacingExtra="9sp"
             android:text="@string/key_4"
             android:textSize="20sp" />
@@ -109,8 +109,8 @@
         <TextView
             android:id="@+id/digit_5"
             style="@style/KeyboardDigitStyle"
-            android:layout_width="13dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:lineSpacingExtra="9sp"
             android:text="@string/key_5"
             android:textSize="20sp" />
@@ -132,8 +132,8 @@
         <TextView
             android:id="@+id/digit_6"
             style="@style/KeyboardDigitStyle"
-            android:layout_width="13dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:lineSpacingExtra="9sp"
             android:text="@string/key_6"
             android:textSize="20sp" />
@@ -155,8 +155,8 @@
         <TextView
             android:id="@+id/digit_7"
             style="@style/KeyboardDigitStyle"
-            android:layout_width="13dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:lineSpacingExtra="9sp"
             android:text="@string/key_7"
             android:textSize="20sp" />
@@ -176,8 +176,8 @@
         <TextView
             android:id="@+id/digit_8"
             style="@style/KeyboardDigitStyle"
-            android:layout_width="13dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:lineSpacingExtra="9sp"
             android:text="@string/key_8"
             android:textSize="20sp" />
@@ -199,8 +199,8 @@
         <TextView
             android:id="@+id/digit_9"
             style="@style/KeyboardDigitStyle"
-            android:layout_width="13dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:lineSpacingExtra="9sp"
             android:text="@string/key_9"
             android:textSize="20sp"/>
@@ -222,8 +222,8 @@
         <TextView
             android:id="@+id/clear"
             style="@style/KeyboardDigitStyle"
-            android:layout_width="13dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:lineSpacingExtra="9sp"
             android:text="@string/key_clear"
             android:textSize="20sp" />
@@ -243,8 +243,8 @@
         <TextView
             android:id="@+id/digit_0"
             style="@style/KeyboardDigitStyle"
-            android:layout_width="13dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:lineSpacingExtra="9sp"
             android:text="@string/key_0"
             android:textSize="20sp" />
