--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,18 +13,6 @@
             app:destination="@id/inputFragment" />
     </fragment>
     <fragment
-        android:id="@+id/checkoutFragment"
-        android:name="com.stripe.aod.sampleapp.fragment.CheckoutFragment"
-        android:label="CheckoutFragment" >
-        <action
-            android:id="@+id/action_checkoutFragment_to_receiptFragment"
-            app:destination="@id/receiptFragment" />
-        <argument
-            android:name="amount"
-            app:argType="integer"
-            android:defaultValue="0" />
-    </fragment>
-    <fragment
         android:id="@+id/receiptFragment"
         android:name="com.stripe.aod.sampleapp.fragment.ReceiptFragment"
         android:label="ReceiptFragment" >
@@ -47,8 +35,15 @@
             android:id="@+id/action_inputFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
         <action
-            android:id="@+id/action_inputFragment_to_checkoutFragment"
-            app:destination="@id/checkoutFragment" />
+            android:id="@+id/action_inputFragment_to_receiptFragment"
+            app:destination="@id/receiptFragment" />
+        <argument
+            android:name="amount"
+            app:argType="integer"
+            android:defaultValue="0" />
+        <argument
+            android:name="paymentIntentID"
+            app:argType="string"/>
     </fragment>
     <fragment
         android:id="@+id/emailFragment"
