it actually works

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.stripe.aod.sampleapp.fragment.HomeFragment"
+        android:name="com.example.fridgeapp.fragment.HomeFragment"
         android:label="HomeFragment" >
         <action
             android:id="@+id/action_homeFragment_to_inputFragment"
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/receiptFragment"
-        android:name="com.stripe.aod.sampleapp.fragment.ReceiptFragment"
+        android:name="com.example.fridgeapp.fragment.ReceiptFragment"
         android:label="ReceiptFragment" >
         <action
             android:id="@+id/action_receiptFragment_to_emailFragment"
@@ -32,7 +32,7 @@
     </fragment>
     <fragment
         android:id="@+id/inputFragment"
-        android:name="com.stripe.aod.sampleapp.fragment.InputFragment"
+        android:name="com.example.fridgeapp.fragment.InputFragment"
         android:label="InputFragment">
         <action
             android:id="@+id/action_inputFragment_to_homeFragment"
@@ -50,7 +50,7 @@
     </fragment>
     <fragment
         android:id="@+id/emailFragment"
-        android:name="com.stripe.aod.sampleapp.fragment.EmailFragment"
+        android:name="com.example.fridgeapp.fragment.EmailFragment"
         android:label="EmailFragment" >
         <action
             android:id="@+id/action_emailFragment_to_receiptFragment"
@@ -61,7 +61,7 @@
     </fragment>
     <fragment
         android:id="@+id/productCatalogFragment"
-        android:name="com.stripe.aod.sampleapp.fragment.ProductCatalogFragment"
+        android:name="com.example.fridgeapp.fragment.ProductCatalogFragment"
         android:label="ProductCatalogFragment">
         <action
             android:id="@+id/action_productCatalogFragment_to_cartFragment"
@@ -69,7 +69,7 @@
     </fragment>
     <fragment
         android:id="@+id/cartFragment"
-        android:name="com.stripe.aod.sampleapp.fragment.CartFragment"
+        android:name="com.example.fridgeapp.fragment.CartFragment"
         android:label="CartFragment">
         <action
             android:id="@+id/action_cartFragment_to_checkoutFragment"
@@ -77,7 +77,7 @@
     </fragment>
     <fragment
         android:id="@+id/checkoutFragment"
-        android:name="com.stripe.aod.sampleapp.fragment.CheckoutFragment"
+        android:name="com.example.fridgeapp.fragment.CheckoutFragment"
         android:label="CheckoutFragment">
         <argument
             android:name="amount"
